--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,35 @@
     font-display: swap;
 }
 
+body {
+	background: linear-gradient(120deg,#03045e, #00b4d8);
+}
+
 main {
     font-family: "Ubuntu", sans-serif;
     font-size: 18px;
     padding: 3%;
-	background-color: Lavender;
-	margin: 3%;
+	background-color: #e9ecef;
+	margin: 5%;
 	border-bottom: 5px solid black;
 	border-radius: 15px;
 }
 
-header {
+header a {
+	float: inline-end;
 	font-family: "Ubuntu", sans-serif;
-	background-color: Lavender;
+	background-color: white;
+	margin: 0.6%;
+	color: black;
+	border-radius: 10px;
+	padding: 10px;
+	text-decoration: none;
+	font-size: 18px;
+}
+
+.header {
+	font-family: "Ubuntu", sans-serif;
+	background-color: #e9ecef;
 	margin: 0.7%;
 	border-bottom: 3px solid black;
 	border-bottom-right-radius: 15px;
