--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header a {
 	font-size: 18px;
 }
 
-.header {
+header {
 	font-family: "Ubuntu", sans-serif;
 	background-color: #e9ecef;
 	margin: 0.7%;
